# finance

./: .gitignore
.github/workflows/: ci.yaml
bizpy/: .gitignore  Makefile  finance.py  mypy.ini  requirements.dev.txt  setup.cfg
bizpy/src/bizpy/: accounting.py  formulas.py
moneypy/: .gitignore  Makefile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
moneypy/notebooks/: equity_scnenarios.ipynb
moneypy/src/moneypy/: __init__.py  accounting.py  core.py  mortgage.py  securities.py  split.py  tax.py
moneypy/src/moneypy/apps/: cash_flow.py  equity_tool.py  equity_tool_sl.py  mortgage_tool_sl.py
moneypy/test/: test_accounting.py  test_securities.py  test_tax.py
notebooks/: mortgage.ipynb
