[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "moneypy"
version = "0.1.0"
dependencies = [
    "dacite~=1.9",
    "requests~=2.32",
    "pandas~=2.0",
    "pyyaml~=6.0",
    "tabulate~=0.9",
]
requires-python = ">=3.8"
authors = [
    {name = "Jon Sass", email="donny.creamer@gmail.com"}
]
description = "Money tools"

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "flake8-docstrings==1.7.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "pandas-stubs==2.0.3.230814",
    "pytest==9.0.2",
    "ruff==0.15.4",
    "ty==0.0.24",
    "types-python-dateutil==2.9.0.20241206",
    "types-pyyaml==6.0.12.20241230",
    "types-requests==2.32.0.20240602",
    "uv==0.10.7",
]

[project.scripts]
mp-equity-tool = "moneypy.apps.equity_tool:main"

