[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "moneypy"
version = "0.1.0"
dependencies = [
    "requests~=2.32",
    "pandas~=2.0",
    "pyyaml~=6.0",
]
requires-python = ">=3.8"
authors = [
    {name = "Jon Sass", email="donny.creamer@gmail.com"}
]
description = "Money tools"

[project.optional-dependencies]
dev = [
    "ruff==0.15.4",
    "build==1.2.2.post1",
    "flake8==7.0.0",
    "flake8-docstrings==1.7.0",
    "isort==5.13.2",
    "mypy==1.14.1",
    "types-requests==2.32.0.20240602",
    "types-pyyaml==6.0.12.20241230",
    "types-python-dateutil==2.9.0.20241206",
    "ty==0.0.24",
    "pandas-stubs==2.0.3.230814",
    "uv==0.10.7",
]

[project.scripts]
equity-tool = "moneypy.apps.equity_tool:main"

